@@ -2,10 +2,18 @@
 // $Id$
 
 /**
+ * @file
+ * Administration menu functionality tests.
+ *
+ * Note: When using $this->assertPattern(), be sure to use the 's' modifier for
+ * the PCRE pattern, since admin menu's output spans over multiple lines.
+ */
+
+
+/**
  * Test menu links depending on user permissions.
  */
 class AdminMenuPermissionsTestCase extends DrupalWebTestCase {
-
   function getInfo() {
     return array(
       'name' => t('Menu link permissions'),
@@ -33,16 +41,16 @@ class AdminMenuPermissionsTestCase extends DrupalWebTestCase {
     // Check that the user can see the admin links, but not the drupal links.
     $this->assertRaw('<div id="admin-menu">', t('Administration menu is displayed.'));
     $this->drupalGet('node');
-    $this->assertPattern('@<div id="admin-menu">(.*\n)*.*admin/content/node@', t('Administer content link found.'));
-    $this->assertNoPattern('@<div id="admin-menu">(.*\n)*.*http://drupal.org@', t('Drupal links not found.'));
-    $this->assertNoPattern('@<div id="admin-menu">(.*\n)*.*admin/build/contact@', t('Contact module link not found.'));
+    $this->assertPattern('@<div id="admin-menu">.*admin/content/node@s', t('Administer content link found.'));
+    $this->assertNoPattern('@<div id="admin-menu">.*http://drupal.org@s', t('Drupal links not found.'));
+    $this->assertNoPattern('@<div id="admin-menu">.*admin/build/contact@s', t('Contact module link not found.'));
 
     // Create a new user with the permission 'display drupal links'.
     $admin_user2 = $this->drupalCreateUser(array('administer site configuration', 'access administration pages', 'administer nodes', 'access administration menu', 'display drupal links'));
     $this->drupalLogin($admin_user2);
     $this->drupalGet('node');
-    $this->assertPattern('@<div id="admin-menu">(.*\n)*.*http://drupal.org@', t('Drupal links found.'));
-    $this->assertNoPattern('@<div id="admin-menu">(.*\n)*.*admin/build/contact@', t('Contact module link not found.'));
+    $this->assertPattern('@<div id="admin-menu">.*http://drupal.org@s', t('Drupal links found.'));
+    $this->assertNoPattern('@<div id="admin-menu">.*admin/build/contact@s', t('Contact module link not found.'));
   }
 }
 
@@ -50,7 +58,6 @@ class AdminMenuPermissionsTestCase extends DrupalWebTestCase {
  * Test menu links depending on installed modules.
  */
 class AdminMenuModulesTestCase extends DrupalWebTestCase {
-
   function getInfo() {
     return array(
       'name' => t('Module menu links'),
@@ -74,7 +81,7 @@ class AdminMenuModulesTestCase extends DrupalWebTestCase {
     // Verify that proper links are displayed.
     $this->assertRaw('<div id="admin-menu">', t('Administration menu is displayed.'));
     $this->drupalGet('node');
-    $this->assertNoPattern('@<div id="admin-menu">(.*\n)*.*admin/build/contact@', t('Contact module link not found.'));
+    $this->assertNoPattern('@<div id="admin-menu">.*admin/build/contact@s', t('Contact module link not found.'));
 
     // Create a new user with 'administer site-wide contact form' permission.
     $admin_user = $this->drupalCreateUser(array('access administration pages', 'access administration menu', 'administer site-wide contact form'));
@@ -82,7 +89,66 @@ class AdminMenuModulesTestCase extends DrupalWebTestCase {
 
     // Verify that proper links are displayed.
     $this->drupalGet('node');
-    $this->assertPattern('@<div id="admin-menu">(.*\n)*.*admin/build/contact@', t('Contact module link found.'));
+    $this->assertPattern('@<div id="admin-menu">.*admin/build/contact@s', t('Contact module link found.'));
+  }
+}
+
+/**
+ * Test contained links in administration menu.
+ */
+class AdminMenuLinksTestCase extends DrupalWebTestCase {
+  function getInfo() {
+    return array(
+      'name' => t('Menu links'),
+      'description' => t('Verify that menu contains proper links.'),
+      'group' => t('Administration menu'),
+    );
+  }
+
+  function setUp() {
+    parent::setUp('admin_menu');
+
+    // Create and log in a full-blown administrative user.
+    $permissions = module_invoke_all('perm');
+    $admin_user = $this->drupalCreateUser(array_keys($permissions));
+    $this->admin_user = $this->drupalLogin($admin_user);
+  }
+
+  /**
+   * Test link contents.
+   */
+  function testLinkContents() {
+    // Create a content-type with special characters.
+    $info = array(
+      'type' => 'special',
+      'name' => 'Cool & Special',
+      'base' => 'node_content',
+    );
+    $info = (object)node_type_set_defaults($info);
+    node_type_save($info);
+    drupal_flush_all_caches();
+
+    // Fetch a page.
+    $this->drupalGet('node');
+    $this->assertRaw('<div id="admin-menu">', t('Administration menu is displayed.'));
+
+    // Verify that proper links are displayed.
+    // We are explicitly NOT using t() here, since the purpose is to test our
+    // custom link titles and 't' option.
+    $links = array(
+      '/admin/build/node-type/page' => strtr('Edit !content-type', array('!content-type' => t('Page'))),
+      '/admin/build/node-type/special' => strtr('Edit !content-type', array('!content-type' => t('Cool & Special'))),
+    );
+    foreach ($links as $url => $title) {
+      $this->assertFieldByXPath('//div[@id="admin-menu"]//a[@href="' . $url . '"]', $title, t('!link-title content-type link found.', array('!link-title' => $title)));
+    }
+    $links = array(
+      '/node/add/page' => t('Page'),
+      '/node/add/special' => t('Cool & Special'),
+    );
+    foreach ($links as $url => $title) {
+      $this->assertFieldByXPath('//div[@id="admin-menu"]//a[@href="' . $url . '"]', $title, t('Create content &raquo; !link-title link found.', array('!link-title' => $title)));
+    }
   }
 }
 
